--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Tarnished</h1>
   <p>I welcome thy, may your visit be pleasant</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcharacter-stats-and-profiles.fandom.com%2Fwiki%2FThe_Tarnished_%2528Canon%2529%2FDAGE9&psig=AOvVaw2bJVuq6s29bi1RcLx7oSuP&ust=1710099283036000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLC4sbT254QDFQAAAAAdAAAAABAE" />
 </body>
 
 </html>
